--- a/src/components/PartMap.css
+++ b/src/components/PartMap.css
@@ -23,17 +23,25 @@
 
 /* PartMap Styling - Shadow Effects for Part Separation */
 
+
 /* Default shadow effects for PartMap only - extra thick white line separation */
 .part-map-container .leaflet-interactive {
-  filter: drop-shadow(2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(2px 0px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px 0px 0px rgba(255, 255, 255, 1));
+  filter: drop-shadow(2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(1px 0px 0px rgba(23, 23, 23, 0.292)) drop-shadow(-1px 0px 0px rgba(23, 23, 23, 0.337));
   transition: none;
 }
 
 
+/* Default shadow effects for PartMap only - extra thick white line separation + evenly distributed yellowish black shadow
+.part-map-container .leaflet-interactive {
+  filter:
+    drop-shadow(2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(2px 0px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px 0px 0px rgba(255, 255, 255, 1)) drop-shadow(0px 0px 8px rgba(255, 215, 0, 0.4)) drop-shadow(0px 0px 16px rgba(0, 0, 0, 0.3)) drop-shadow(0px 0px 24px rgba(255, 215, 0, 0.2)) drop-shadow(0px 0px 32px rgba(0, 0, 0, 0.2));
+  transition: none;
+} */
+
 
 /* Part-specific enhanced shadows */
-.montreal-map-container .leaflet-overlay-pane svg path {
-  transition: all 0.3s ease-out;
+.part-map-container .leaflet-overlay-pane svg path {
+  transition: none;
   stroke-linejoin: round;
   stroke-linecap: round;
 }
