--- a/src/components/MontrealMap.css
+++ b/src/components/MontrealMap.css
@@ -44,16 +44,17 @@
 .selected-part-label {
   position: fixed;
   top: 5%;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 90vw;
+  text-align: center;
   z-index: 2000;
   font-size: 3rem;
   font-weight: 700;
-  color: #FFD700;
+  color: black;
+  /*  #FFD700; */
   text-transform: uppercase;
   letter-spacing: 10px;
   font-family: 'DM Serif Display', sans-serif;
-  text-shadow:
+  /* text-shadow:
     5px 5px 0px #000000,
     -3px -3px 0px #000000,
     3px -3px 0px #000000,
@@ -61,8 +62,8 @@
     0 0 30px rgba(255, 215, 0, 1),
     0 0 50px rgba(255, 215, 0, 0.9),
     0 0 70px rgba(255, 215, 0, 0.7),
-    0 0 100px rgba(255, 215, 0, 0.5);
-  animation: partLabelGlow 2s ease-in-out infinite;
+    0 0 100px rgba(255, 215, 0, 0.5); */
+  /* animation: partLabelGlow 2s ease-in-out infinite; */
   pointer-events: none;
   text-align: center;
 }
