--- a/src/components/PartMap.css
+++ b/src/components/PartMap.css
@@ -2,11 +2,6 @@
 .part-map-container {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(135deg,
-      #FFFFFF 0%,
-      #F8F8F8 35%,
-      #FFFFFF 65%,
-      #F8F8F8 100%);
   display: flex;
   flex-direction: column;
   font-family: 'Nunito', sans-serif;
@@ -15,10 +10,37 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5), 0 0 40px rgba(0, 0, 0, 0.3), 0 0 60px rgba(0, 0, 0, 0.2);
 }
 
+.part-map-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../backgroundImages/istockphoto-160291870-1024x1024.jpg');
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  opacity: 0.15;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.part-map-container>* {
+  z-index: 1;
+}
+
 .part-map-container .custom-montreal-map {
   width: 100%;
   height: 100vh;
   position: relative;
+  background: transparent !important;
+}
+
+/* Ensure Leaflet container is transparent to show background image */
+.part-map-container .leaflet-container {
+  background: transparent !important;
+  animation: none !important;
 }
 
 /* PartMap Styling - Shadow Effects for Part Separation */
@@ -29,6 +51,12 @@
   filter: drop-shadow(2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(1px 0px 0px rgba(23, 23, 23, 0.292)) drop-shadow(-1px 0px 0px rgba(23, 23, 23, 0.337));
   transition: none;
 }
+
+.part-map-container .leaflet-interactive:hover {
+  filter: drop-shadow(2px 2px 0px rgba(0, 0, 0, 1)) drop-shadow(-2px -2px 0px rgba(0, 0, 0, 1)) drop-shadow(2px -2px 0px rgba(0, 0, 0, 1)) drop-shadow(-2px 2px 0px rgba(0, 0, 0, 1)) drop-shadow(0px 2px 0px rgba(0, 0, 0, 1)) drop-shadow(0px -2px 0px rgba(0, 0, 0, 1)) drop-shadow(1px 0px 0px rgba(0, 0, 0, 1)) drop-shadow(-1px 0px 0px rgba(0, 0, 0, 1));
+  transition: none;
+}
+
 
 
 /* Default shadow effects for PartMap only - extra thick white line separation + evenly distributed yellowish black shadow
