--- a/src/components/PartMap.css
+++ b/src/components/PartMap.css
@@ -46,15 +46,17 @@
 /* PartMap Styling - Shadow Effects for Part Separation */
 
 
-/* Default shadow effects for PartMap only - extra thick white line separation */
+/* Default shadow effects for PartMap only - border only changes on hover */
 .part-map-container .leaflet-interactive {
-  filter: drop-shadow(2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(2px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(-2px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px 2px 0px rgba(255, 255, 255, 1)) drop-shadow(0px -2px 0px rgba(255, 255, 255, 1)) drop-shadow(1px 0px 0px rgba(23, 23, 23, 0.292)) drop-shadow(-1px 0px 0px rgba(23, 23, 23, 0.337));
+  filter: drop-shadow(1px 1px 0px white) drop-shadow(-1px -1px 0px white) drop-shadow(1px -1px 0px white) drop-shadow(-1px 1px 0px white) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.15));
   transition: none;
+  
 }
 
 .part-map-container .leaflet-interactive:hover {
-  filter: drop-shadow(2px 2px 0px rgba(0, 0, 0, 1)) drop-shadow(-2px -2px 0px rgba(0, 0, 0, 1)) drop-shadow(2px -2px 0px rgba(0, 0, 0, 1)) drop-shadow(-2px 2px 0px rgba(0, 0, 0, 1)) drop-shadow(0px 2px 0px rgba(0, 0, 0, 1)) drop-shadow(0px -2px 0px rgba(0, 0, 0, 1)) drop-shadow(1px 0px 0px rgba(0, 0, 0, 1)) drop-shadow(-1px 0px 0px rgba(0, 0, 0, 1));
+  filter: drop-shadow(1px 1px 0px black) drop-shadow(-1px -1px 0px black) drop-shadow(1px -1px 0px black) drop-shadow(-1px 1px 0px black) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.15));
   transition: none;
+  
 }
 
 
