--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,7 @@
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'DM Serif Text', 'Nunito', sans-serif;
   touch-action: manipulation;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
