--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -19,7 +19,7 @@
   justify-content: flex-end;
   gap: 15px;
   font-weight: bold;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'DM Serif Text', 'DM Serif Text', 'Nunito', sans-serif;
 }
 
 /* Main Header Content */
